syntax = "proto3";

package stockrec;
option go_package =  "central/proto/pb";
service RustService {
  rpc SendRollData(SendRollDataRequest) returns (SendRollDataResponse);
  rpc SendBootSignal(SendBootSignalRequest) returns (SendBootSignalResponse);
}

message SendBootSignalRequest{
    repeated TickerHistory hist = 1;
}
message SendBootSignalResponse{
    bool status = 1;
}
message SendRollDataRequest{
    repeated StockUpdate stock = 1;
}

message SendRollDataResponse{
    repeated StockSeries missing = 1;
}

message StockSeries{
    string name  = 1;
    CandleSize size = 2;
}
message TickerHistory{
    string name = 1;
    repeated Series series = 2;
}
enum CandleSize{
    SEC5 = 0;
    SEC30 = 1;
    MIN1 = 3;
    MIN15 = 4;
    HOUR1 = 5;
    DAY1 = 6;
}
message Series{
    CandleSize size = 1;
    repeated StockValue val = 2;
}

message StockValue {
  float open = 1;
  float close = 2;
  float high = 3;
  float low = 4;
}
message StockUpdate{
    string name = 1;
    repeated LatestStockVals vals = 2;
}
message LatestStockVals{
    CandleSize size = 1;
    StockValue val = 2;
}
